@@ -6,6 +6,7 @@
 * Implemented automatic scale of spectrum graph switch.
 * Aligned the height of the blocks in "cgroup".
 * Implemented split frequency display.
+* Threshold markers are now editable.
 * Updated build scripts and dependencies.
 
 === 1.0.15 ===
